# Teckypedia

./: .replit  Dockerfile  README.md  app.py  application.py  buildspec.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
Dockerfile# Use the official Python image as the base image FROM python:3.9-slim  # Set the working directory inside the container WORKDIR /: buildspec.yml
website/: __init__.py  auth.py  models.py  views.py
website/static/css/: backup.html  main.css
website/templates/: about.html  admin_login.html  admin_panel.html  base.html  cart.html  checkout.html  home.html  login.html  order_confirmation.html  product.html  sign_up.html
